Remove unused code, format code